@@ -1,0 +1,2 @@
+%div
+  = markdown(@broadcast_message.message)
